# computing-for-ds-hw6

./: .coverage  hw4.py  hw5.py  main.py  pyproject.toml
tests/: test_card_deck.py  test_compute_distance.py  test_count_simba.py  test_get_day_month_year.py  test_interface.py  test_patient.py  test_sum_general_int_list.py
